# mipcomp22

./: .gitignore  404 Not Found.html  CMakeCache.txt  CMakeLists.txt  Makefile  _utils.py  cmake_install.cmake  mipcomp.py  mipcomp.sh  pymipcomp.sh
include/: my_struct_tree.h  my_tree.h
src/: _funcs.c  _structs.c  _stuff.txt  main.c  my_solve.c  my_tree.c
